Last commit until Guards

--- a/src/app/_components/genre/genre.component.html
+++ b/src/app/_components/genre/genre.component.html
@@ -57,7 +57,7 @@
                                formControlName="description">
                     </div>
                     <div class="input-group">
-                        <input nbButton type="submit" value="Créer"
+                        <input nbButton type="submit" value="Modifier"
                                [disabled]="modifgenreForm.invalid">
                     </div>
                 </form>
