--- a/src/app/_components/rencontre/rencontre.component.html
+++ b/src/app/_components/rencontre/rencontre.component.html
@@ -1,5 +1,5 @@
 <nb-card>
   <nb-card-body>
-
+    <button nbButton (click)="addRencontre()"><nb-icon icon="plus-outline"></nb-icon></button>
   </nb-card-body>
 </nb-card>
