--- a/src/app/_components/rencontre/add-rencontre/add-rencontre.component.html
+++ b/src/app/_components/rencontre/add-rencontre/add-rencontre.component.html
@@ -10,11 +10,11 @@
   <div formGroupName="adresse">
     <input nbInput type="text" formControlName="rue" placeholder="Rue">
     <input nbInput type="text" formControlName="numero" placeholder="Numéro">
-    <input nbInput type="text" formControlName="codePostal" placeholder="Code postal">
+    <input nbInput type="number" formControlName="codePostal" placeholder="Code postal">
     <input nbInput type="text" formControlName="ville" placeholder="Localité">
   </div>
   <input nbInput type="file" placeholder="Photo" (change)="recupPhoto($event.target.files)">
-  <input nbInput type="text" formControlName="photo" hidden>
+  <div formGroupName="photo"><input nbInput type="text" formControlName="lien" hidden></div>
   <input nbButton type="submit" value="Annuler" (click)="close(false)">
   <input nbButton type="submit" value="Créer" [disabled]="form.invalid">
 </form>
