--- a/src/app/_components/rencontre/add-rencontre/add-rencontre.component.html
+++ b/src/app/_components/rencontre/add-rencontre/add-rencontre.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form" (ngSubmit)="close(true)">
   <input nbInput type="text" name="titre" placeholder="Titre" formControlName="titre">
   <input nbInput [nbDatepicker]="datepicker" placeholder="Date de la rencontre" name="date" formControlName="date">
-  <nb-datepicker #datepicker></nb-datepicker>
+  <nb-datepicker #datepicker [min]="min"></nb-datepicker>
   <input nbInput type="time" formControlName="time" placeholder="Heure de début">
   <input nbInput type="number" formControlName="tempsDeJeu" min="0" placeholder="Temps de jeu estimé en heures">
   <input nbInput type="number" formControlName="nbrParticipantLimite" min="0"
