--- a/src/app/_components/rencontre/rencontre.component.html
+++ b/src/app/_components/rencontre/rencontre.component.html
@@ -2,10 +2,8 @@
   <nb-card-header>
     <nb-tabset (changeTab)="changeTab($event)">
       <nb-tab tabTitle="J'ai créer">
-        <p>List of <strong>users</strong>.</p>
       </nb-tab>
       <nb-tab tabTitle="Je participe">
-        <p>List of <strong>orders</strong>.</p>
       </nb-tab>
       <nb-tab tabTitle="Je peux participer">
       </nb-tab>
@@ -19,7 +17,7 @@
   <nb-card-body>
     <nb-list>
       <nb-list-item *ngFor="let item of models">
-        <div style="display: flex;">
+        <div style="display: flex;" *ngIf="filter(item)">
           <div style="width: 100%;">
             <h4>{{item.date}} : {{item.titre}}</h4>
             <p>Description : {{item.description}}</p>
