--- a/src/app/_components/rencontre/rencontre.component.html
+++ b/src/app/_components/rencontre/rencontre.component.html
@@ -21,6 +21,7 @@
           <div style="width: 100%;">
             <h4>{{item.date}} : {{item.titre}}</h4>
             <p>Description : {{item.description}}</p>
+            <img [src]="item.photo?.lien" alt="y a pas de photo monsieur">
           </div>
           <div style="width: 20%;">
             <button nbButton (click)="delete(item)">
@@ -41,3 +42,4 @@
     </nb-list>
   </nb-card-body>
 </nb-card>
+
